<resources>
    <string name="app_name">Noticias NOW</string>
    <string name="boas_vindas">Bem-vindo ao Notícias NOW</string>


    <!-- Activity Login -->
    <string name="titulo_login">Login</string>
    <string name="senha">Senha</string>
    <string name="login">Logar</string>
    <string name="preencher_campos">Preencha todos os campos.</string>
    <string name="realizando_login">Realizando login...</string>
    <string name="criar_conta">Criar conta</string>

    <!-- Activity Cria conta -->
    <string name="name_user">Nome</string>
    <string name="email">E-mail</string>
    <string name="criando_usuario">Criando usuário...</string>

    <!-- Activity Editar perfil -->
    <string name="salvar">Salvar</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="salvando_usuario">Salvando usuário...</string>
    <string name="usuario_atualizado">Usuário atualizado com sucesso.</string>


    <!-- Activity publicar news -->
    <string name="title_publicacao">Minha Publicação</string>
    <string name="publicar">Publicar</string>
    <string name="title">Título</string>
    <string name="descricao">Descrição</string>
    <string name="tipo">Tipo</string>
    <string name="publicando">Publicando...</string>
    <string name="sucesso_publicao">Nova publicação realizada com sucesso.</string>
    <string name="deletar_news">Deletar notícia?</string>
    <string name="atualizar_news">Atualizar Publicação</string>
    <string name="atualizar">Atualizar</string>
    <string name="atualizando_news">Atualizando notícia...</string>
    <string name="atualizando_news_sucesso">Notícia atualizada com sucesso.</string>

    <string-array name="tipos">
        <item>Selecione...</item>
        <item>Poluição do ar</item>
        <item>Trânsito</item>
        <item>Desmatamento</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_my_news">Minhas Publicações</string>
    <string name="nav_logout">Logout</string>
    <string name="sair">Deseja realmente sair?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="sem_conexao">Sua conexão parece estar offline</string>
    <string name="error_generico">Ocorreu um problema na conexão.\nTente mais tarde.</string>
    <string name="carregando">Carregando...</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_detalhe_noticia">DetalheNoticiaActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="update_available">Update available</string>
    <string name="downloading_update">Downloading update… %1$d%%</string>
    <string name="update_now">Update now</string>
    <string name="update_available_snackbar">An update is available</string>
    <string name="update_downloaded">Update downloaded successfully</string>
    <string name="complete_update">Complete update</string>

</resources>
