<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:id="@+id/activity_publicar_noticia"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.noticias_now.publish.PublishNewsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?actionBarSize"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/margin_15dp"
            android:layout_marginRight="@dimen/margin_15dp"
            android:orientation="vertical"
            android:layout_above="@+id/bt_activity_publicar_news">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:id="@+id/ed_title_activity_publicar_news"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:textColorHint="@color/colorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipo"
                android:paddingLeft="@dimen/margin_5dp"
                android:textSize="@dimen/font_normal"
                android:textColor="@color/colorPrimary" />

            <Spinner
                android:id="@+id/sp_tipo_activity_publicar_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:entries="@array/types"></Spinner>

            <com.google.android.material.textfield.TextInputLayout
                android:paddingTop="@dimen/margin_15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:id="@+id/ed_descricao_activity_publicar_news"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:hint="@string/descricao"
                    android:textColorHint="@color/colorPrimary"
                    android:textColorHighlight="@color/colorPrimaryDark" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


        <Button
            android:id="@+id/bt_activity_publicar_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_15dp"
            android:text="@string/publicar"
            android:background="@color/colorPrimary"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>
</layout>
