<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_editar_perfil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space_colors_blue_purple_stars"
    tools:context="com.noticias_now.ui.activity.EditarPerfilActivity">

    <include layout="@layout/toolbar_default" />

    <LinearLayout
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_margin="@dimen/margin_15dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/iv_activity_editar_perfil_logo"
                android:layout_width="@dimen/margin_100dp"
                android:layout_height="@dimen/margin_100dp"
                android:background="@drawable/bg_photo_user"
                android:layout_centerInParent="true"/>

            <ImageView
                android:id="@+id/iv_activity_editar_perfil_logor"
                android:layout_width="@dimen/margin_60dp"
                android:layout_height="@dimen/margin_60dp"
                android:background="@drawable/user"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/lv_activity_editar_perfil_usuario"
            style="@style/layout_edit">

            <ImageView
                android:layout_width="@dimen/margin_30dp"
                android:layout_height="@dimen/margin_30dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/logo"/>

            <EditText
                android:id="@+id/ed_nome_editar_activity"
                style="@style/edt_default"
                android:hint="@string/name_user" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lv_activity_editar_perfil_email"
            style="@style/layout_edit">

            <ImageView
                android:layout_width="@dimen/margin_30dp"
                android:layout_height="@dimen/margin_30dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/logo"/>

            <EditText
                android:id="@+id/ed_email_editar_activity"
                style="@style/edt_default"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lv_activity_editar_perfil_senha"
            style="@style/layout_edit">

            <ImageView
                android:layout_width="@dimen/margin_30dp"
                android:layout_height="@dimen/margin_30dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/logo" />

            <EditText
                android:id="@+id/ed_senha_editar_activity"
                style="@style/edt_default"
                android:inputType="textPassword"
                android:hint="@string/senha"/>

        </LinearLayout>

        <Button
            android:id="@+id/bt_activity_editar_perfil_salvar"
            style="@style/bt_default"
            android:text="@string/salvar"
            android:layout_marginTop="@dimen/margin_40dp" />

    </LinearLayout>

</RelativeLayout>
